This this the changelog file for the Pothos GUI toolkit.

Release 0.4.0 (pending)
==========================

- Added editable dimension option to the DTypeChooser edit widget
- Support click, drag, and release connection creation mode
- Open the properties panel after making a signal/slots connection
- Implement block mouse tracking for dynamic port text rendering
- Configurable block render mode for displaying event ports inline
- Save state for debug graphics (connection points & bounding boxes)

Release 0.3.2 (2016-05-03)
==========================

- Fix topology traversal when graph object is disabled
- Fix connection shape() method padding in both directions
- Avoid possible recursive loops in topology traversal code
- Always use the absolute path for saved topology files

Release 0.3.1 (2016-03-06)
==========================

- Fix separators in makeIconPath() for setStyleSheet()
- Added missing libpoco-dev to debian Build-Depends

Release 0.3.0 (2015-12-16)
==========================

- Added debian packaging support for GUI designer
- Support ghost blocks when description is missing
- Save active edit tab in the block properties panel
- Added clear button to log message window
- Support conditional parameter preview mode
- Fix for size grip in GraphWidgetContainer on OSX
- Fixes for missing title bar and menu bar on OSX
- Cross platform styler for instances of QFormLayout
- Graph editor tabs setDocumentMode() for OSX appearance
- Ignore key press events from graph widgets with focus
- Switch logger display to QPlainTextEdit for performance

Release 0.2.2 (2015-12-07)
==========================

- Fix empty signal slot connection to display text label
- Fix QApplication exit error by giving QSettings a parent

Release 0.2.1 (2015-08-26)
==========================

- SpinBox edit widgets cache value to fix formatting bug
- Extra try/catch for system info because JSON can throw
- Hide message window tab bar until multiple tabs are used