@@ -21,8 +21,10 @@ fi
 echo -n "Uninstall Pothos GUI icon resources...	"
 if [ -x /usr/bin/xdg-icon-resource ] ; then
     for theme in hicolor gnome; do
-        xdg-icon-resource uninstall --noupdate --context mimetypes --theme ${theme} --size 128 application-pothos-gui || true
-        xdg-icon-resource uninstall --noupdate --context apps --theme ${theme} --size 128 pothos-gui || true
+        for size in 16 22 32 48 64 128; do
+            xdg-icon-resource uninstall --noupdate --context mimetypes --theme ${theme} --size ${size} application-pothos-gui || true
+            xdg-icon-resource uninstall --noupdate --context apps --theme ${theme} --size ${size} pothos-gui || true
+        done
     done
     xdg-icon-resource forceupdate || true
     echo "OK"
