@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.4.0 (pending)
 ==========================
 
+- Added icons for every scale type for the freedesktop.org install
 - Added editable dimension option to the DTypeChooser edit widget
 - Support click, drag, and release connection creation mode
 - Open the properties panel after making a signal/slots connection
